<resources>
    <string name="app_name">Rewards</string>
    <string name="no_location">Unspecified Location</string>
    <string name="full_name">full name</string>
    <string name="points_awarded">Points Awarded:</string>
    <string name="points">points</string>
    <string name="department">Department:</string>
    <string name="position">Position</string>
    <string name="position1">position</string>
    <string name="department1">department</string>
    <string name="your_story">Your Story</string>
    <string name="story">story</string>
    <string name="reward_points_to_send">Reward points to send:</string>
    <string name="select_username">Select Username</string>
    <string name="select_password">Select Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="department_name">Department Name</string>
    <string name="position_title">Position Title</string>
    <string name="tell_us_something_about_yourself">Tell us something about yourself!</string>
    <string name="reward_history_0">Reward History (0)</string>
    <string name="password">password</string>
    <string name="firstName">first name</string>
    <string name="lastName">last name</string>
    <string name="department2">department</string>
    <string name="position2">position</string>
    <string name="enterStoryHere">Enter your story here</string>
    <string name="textview">TextView</string>
    <string name="username">Username</string>
    <string name="login">LOGIN</string>
    <string name="password1">Password</string>
    <string name="tapHereCreate">Tap here to create a profile</string>
    <string name="tapClear">Tap to clear saved API Key</string>
    <string name="remember">Remember my credentials</string>
    <string name="yourStory">Your Story:</string>
    <string name="pointsToAward">Points to Award</string>
    <string name="position3">Position</string>
    <string name="fullname">fullname</string>
    <string name="username2">username</string>
    <string name="pointsAwarded">Points Awarded</string>
    <string name="department3">Department</string>
    <string name="rewardHistory">Reward History</string>
    <string name="firstName4">First Name</string>
    <string name="lastName3">Last Name</string>
    <string name="studentEmail">Student Email (.edu)</string>
    <string name="studentID">Student Id Number</string>
    <string name="date">date</string>
    <string name="comment">comment</string>
    <string name="name">name</string>
    <string name="fullName">full name</string>
    <string name="points2">reward_points</string>
    <string name="position4">position</string>
    <string name="save2">save</string>
    <string name="delete">delete_in_view</string>
    <string name="edit">edit_in_view</string>
    <string name="add">add_in_view</string>
    <string name="save">save</string>
</resources>